fixed contrast ratio

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -224,7 +224,7 @@ nav {
 
 /*            styles buttons            */
 .button {
-  background-color: #ed213a;;
+  background-color: #E91C21;
   color: white;
   height: 50px;
   display: flex;
